--- a/windows-file-server/01-deploy-od-environment/readme.adoc
+++ b/windows-file-server/01-deploy-od-environment/readme.adoc
@@ -33,22 +33,6 @@ File system creation is currently not supported in the following Availability Zo
 | *use1-az3*
 | Open the link:https://us-east-1.console.aws.amazon.com/vpc/home?region=us-east-1#subnets:[us-east-1 VPC] console for AZ mapping.
 
-| *Oregon* (us-west-2)
-| *usw2-az4*
-| Open the link:https://us-west-2.console.aws.amazon.com/vpc/home?region=us-west-2#subnets:[us-west-2 VPC] console for AZ mapping.
-
-| *Sydney* (ap-southeast-2)
-| *apse2-az3*
-| Open the link:https://ap-southeast-2.console.aws.amazon.com/vpc/home?region=ap-southeast-2#subnets:[ap-southeast-2 VPC] console for AZ mapping.
-
-| *Tokyo* (ap-northeast-1)
-| *apne1-az3*
-| Open the link:https://ap-northeast-1.console.aws.amazon.com/vpc/home?region=ap-northeast-1#subnets:[ap-northeast-1 VPC] console for AZ mapping.
-
-| *Frankfurt* (eu-central-1)
-| *euc1-az1*
-| Open the link:https://eu-central-1.console.aws.amazon.com/vpc/home?region=eu-central-1#subnets:[eu-central-1 VPC] console for AZ mapping.
-
 |===
 +
 When selecting availability zones in the CloudFormation create stack wizard, take care not to select an availability zone mapped to one of the Availability Zone IDs listed above.
@@ -58,55 +42,7 @@ TIP: *_Context-click (right-click)_* the *Deploy to AWS* button and open the lin
 |===
 |Region | Launch template with a new VPC
 | *N. Virginia* (us-east-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=us-east-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Ohio* (us-east-2)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=us-east-2#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *N. California* (us-west-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=us-west-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Oregon* (us-west-2)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=us-west-2#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Hong Kong* (ap-east-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=ap-east-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Mumbai* (ap-south-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=ap-south-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Seoul* (ap-northeast-2)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=ap-northeast-2#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Singapore* (ap-southeast-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=ap-southeast-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Sydney* (ap-southeast-2)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=ap-southeast-2#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Tokyo* (ap-northeast-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=ap-northeast-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Canada* (ca-central-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=ca-central-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Frankfurt* (eu-central-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=eu-central-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Ireland* (eu-west-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=eu-west-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *London* (eu-west-2)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=eu-west-2#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Paris* (eu-west-3)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=eu-west-3#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *Stockholm* (eu-north-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=eu-north-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
-
-| *São Paulo* (sa-east-1)
-a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=sa-east-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://s3.amazonaws.com/amazon-fsx/workshop/windows-file-server/templates/fsx-windows-od-workshop.yaml]
+a| image::deploy-to-aws.png[link=https://console.aws.amazon.com/cloudformation/home?region=us-east-1#/stacks/new?stackName=fsx-windows-workshop&templateURL=https://raw.githubusercontent.com/gastonlp/amazon-fsx-workshop/master/windows-file-server/templates/fsx-windows-od-workshop.yaml]
 |===
 +
 . Accept the defaults on the *Prerequisite - Prepare template* page and *_click_* *Next*.
