--- a/readme.adoc
+++ b/readme.adoc
@@ -7,9 +7,11 @@ image:fsx-aws-logos.png[align="left",width=420]
 
 This is a set of workshops designed for architects and engineers who would like to learn more about Amazon Web Services (AWS) full-managed third party file system service - link:https://aws.amazon.com/fsx/[Amazon FSx].
 
-Click the link below to access the workshop.
+Click the link below to access the workshop labs.
 
-image:fsx-windows-od-workshop.png[link=/windows-file-server/01-deploy-od-environment]
+link:https://catalog.us-east-1.prod.workshops.aws/workshops/f3a3e2bd-e1d5-49de-b8e6-dac361842e76/en-US/basic-modules/60-s3/s3[Lab 1 - Amazon S3 Hands-On Lab]
+link:https://catalog.us-east-1.prod.workshops.aws/workshops/f3a3e2bd-e1d5-49de-b8e6-dac361842e76/en-US/basic-modules/60-s3/efs[Lab 2- Amazon Elastic File System]
+link=/windows-file-server/01-deploy-od-environment[Lab 3 - FSx Workshop]
 
 === Participation
 
